Wed Oct  2 13:03:58 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: set ac_cv_func_setitimer to "no" on Cygwin.

Tue Oct  1 23:48:32 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* ext/socket/socket.c (sock_new): duplicate underlying socket
	  handle not only descriptor.  [ruby-talk:40015]

	* ext/socket/socket.c (bsock_close_read, bsock_close_write): not
	  use myfdclose().

	* win32/win32.c, win32/win32.h (myfddup, myfdclose): delete.

Wed Sep 25 16:14:51 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_match): p1 may exceed pend limit.

Mon Sep 23 02:46:29 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ruby_run): should set toplevel visibility again here. 

	* eval.c (rb_eval): should not rely on ruby_class == rb_cObject
	  check.   Besides allow implicit publicity for attribute set
	  methods.

	* parse.y (primary): need not to check class_nest, just set
	  whether method is an attrset or not.

Sun Sep 22 17:08:11 2002  Tanaka Akira  <akr@m17n.org>
	
	* string.c (rb_str_each_line): p might be at the top of the
	  string.

Sun Sep 22 15:31:33 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* lib/mkmf.rb: some backports.

Sun Sep 15 21:42:07 2002  KONISHI Hiromasa <konishih@fd6.so-net.ne.jp>

	* win32/win32.c (opendir): Corresponds to the unjust path containing ".
	                (win32_stat) : ditto.

Thu Sep 12 00:52:15 2002  NAKAMURA Usaku <usa@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): Merge from 1.7: link with
	  CONFIG["LIBS"].

Thu Sep 12 00:09:32 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (rb_trap_eval): preserve thread status and so on.
	  [ruby-talk:40337], [ruby-core:00019]

Wed Sep 11 16:49:26 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/open3.rb: Merge from 1.7: Turn sync on for the writer
	  handle.

	* lib/ping.rb: Merge from 1.7: Fix a typo.

Wed Sep 11 16:24:22 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/thread.rb: Merge from 1.7: Get rid of race condition in