@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.8"
-#define RUBY_RELEASE_DATE "2002-10-02"
+#define RUBY_RELEASE_DATE "2002-10-03"
 #define RUBY_VERSION_CODE 168
-#define RUBY_RELEASE_CODE 20021002
+#define RUBY_RELEASE_CODE 20021003
